package observer_pattern.ConsoleCA2;

public interface ButtonListener {
    public void onClick(Button button);
}
